--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@sentry/react": "^10.17.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
