--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.542.0",
     "next-themes": "^0.4.6",
+    "pdfkit": "^0.17.2",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-day-picker": "^9.9.0",
